...
  message: string | null;
}) => {
  return status.severity;
};

export const getStatusMessageColorClass = (status: { severity: "INFO" | "WARN" | "ERROR"; message: string | null }) => {
  if (status.message === "OK") return "text-success";
  return getDiagnosticsColorClassForDisplaySeverity(status.severity);
};

