appId: uk.gleissner.c64commander
tags:
  - edge
  - slow
  - device
  - real-network
env:
  SHORT_TIMEOUT: ${SHORT_TIMEOUT || "5000"}
  TIMEOUT: ${TIMEOUT || "15000"}
  LONG_TIMEOUT: ${LONG_TIMEOUT || "20000"}
---
- runFlow: subflows/launch-and-wait.yaml
- tapOn:
    id: "tab-play"
- extendedWaitUntil:
    visible: "Playlist"
    timeout: ${SHORT_TIMEOUT}
- assertVisible:
    id: "page-play"
- setAirplaneMode:
    value: enabled
- extendedWaitUntil:
    visible: "Offline"
    timeout: ${TIMEOUT}
- takeScreenshot: offline-mode
- setAirplaneMode:
    value: disabled
- extendedWaitUntil:
    visible: "Connected"
    timeout: ${TIMEOUT} # Reconnecting might take longer
- takeScreenshot: online-mode
